added search bar functionality

--- a/src/search_bar/App.css
+++ b/src/search_bar/App.css
@@ -16,7 +16,7 @@ input {
 
 .tertiarySearchClassName:before{
   color:white;
-  content:" Price:  ("
+  content:" UId:  ("
 }
 
 .tertiarySearchClassName:after{
