integrated with date picker and event dropdown

--- a/src/search_bar/App.css
+++ b/src/search_bar/App.css
@@ -11,16 +11,16 @@ input {
 
 }
 .tertiarySearchClassName{
-  color:white;
+  color:blue;
 }
 
 .tertiarySearchClassName:before{
-  color:white;
-  content:" UId:  ("
+  color:blue;
+  content:" UID:  ("
 }
 
 .tertiarySearchClassName:after{
-  color:white;
+  color:blue;
   content:" )"
 }
 
